# GIAIC---Q-3

./: README.md~
GIAIC - Q 3/: README.md~
GIAIC - Q 3/01-python_poetry/: pyproject.toml
GIAIC - Q 3/Q3-Onsite-Classes/Class-1 23-1-2025/class_1/23.02.2025/: main.py  pyproject.toml
GIAIC - Q 3/Q3-Onsite-Classes/Class-2_02_03_2025/: class-02.tt  tuple_class-2.py
GIAIC - Q 3/project-unit-convertor/01-unit-conversion-in-python/: pyproject.toml
GIAIC - Q 3/python/: class1.ipynb  class1.py
GIAIC - Q 3/python/02-class string-fstring/: 02-class.ipynb  02-class.py
GIAIC - Q 3/python/03-class-python-operators/: class-03(operators).py  class-03.ipynb
GIAIC - Q 3/streamlit-challange/titanic-data/: main.py  pyproject.toml
GIAIC - Q 3/streamlit-challange/titanic-data/list/: pyvenv.cfg
GIAIC - Q 3/streamlit-challange/titanic-data/list/Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu
Q3-Onsite-Classes/Class-2_02_03_2025/: class-02.tt  tuple_class-2.py
number-guess-game/: main.py
